--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 NODE_ENV='development'
 PORT='8081'
 PG_PORT=5432
-PG_PASSWORD='romania123'
+PG_PASSWORD='asdadada'
 PG_USER='postgres'
 PG_HOST='localhost'
-PG_DATABASE='addgig'
+PG_DATABASE='sadasdasdas'
